--- a/trainingne.ipynb
+++ b/trainingne.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "id": "0cd13322",
    "metadata": {},
    "outputs": [
@@ -367,16 +367,86 @@
        "      <td>stormy</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37635</th>\n",
+       "      <td>bike</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>regular</td>\n",
+       "      <td>stormy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14700</th>\n",
+       "      <td>motorcycle</td>\n",
+       "      <td>None</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>regular</td>\n",
+       "      <td>fog</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37852</th>\n",
+       "      <td>motorcycle</td>\n",
+       "      <td>jam</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>regular</td>\n",
+       "      <td>fog</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6736</th>\n",
+       "      <td>truck</td>\n",
+       "      <td>jam</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>regular</td>\n",
+       "      <td>fog</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6936</th>\n",
+       "      <td>motorcycle</td>\n",
+       "      <td>jam</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>regular</td>\n",
+       "      <td>sunny</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17666</th>\n",
+       "      <td>bike</td>\n",
+       "      <td>jam</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>regular</td>\n",
+       "      <td>cloudy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31519</th>\n",
+       "      <td>motorcycle</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>regular</td>\n",
+       "      <td>fog</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "          Vehicle Traffic   Area Category Weather  flexibility_score\n",
-       "20794  motorcycle  medium  urban  regular  stormy                  2"
+       "20794  motorcycle  medium  urban  regular  stormy                  2\n",
+       "37635        bike  medium  urban  regular  stormy                  1\n",
+       "14700  motorcycle    None  urban  regular     fog                  2\n",
+       "37852  motorcycle     jam  urban  regular     fog                  1\n",
+       "6736        truck     jam  urban  regular     fog                  0\n",
+       "6936   motorcycle     jam  urban  regular   sunny                  2\n",
+       "17666        bike     jam  urban  regular  cloudy                  1\n",
+       "31519  motorcycle  medium  urban  regular     fog                  2"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +548,7 @@
     "simulate = predict_flexibility('cloudy', 'light', 'motorcycle', 'urban', 'fragile')\n",
     "print('Prediction', simulate)\n",
     "df_sample = df[features + ['flexibility_score']].sample(min(8,len(df)), random_state=42)\n",
-    "df_sample.head(1)\n"
+    "df_sample.head(10)\n"
    ]
   }
  ],
